recursion.cons.min.Min.scala.error
Compilation error:
Min:19: error: not found: value a
      a = l.head;
      ^Min:20: error: not found: value a
      return(a::t);
             ^