recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
	
 var t = l.tail;
  
  if(t == Nil)
  {
    return l.head;
  }
  else
  {
  	if(t.head < l.head)
    {
      return min(t);
    }
    else
    {
    	t = t.tail;
      a = l.head;
      return(a::t);
      
    }
  }

}